update DELETE /api/v1/likes/user/{userId}/post/{postId} to remove body request
