# swagger.json
@@ -401,7 +401,52 @@
 						}
 					}
 				}
-			}
+      },
+      "/api/v1/likes/user/{userId}/post/{postId}": {
+        "delete": {
+          "tags": [
+            "Likes"
+          ],
+          "summary": "remove user post like relation",
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ],
+          "parameters": [
+            {
+              "name": "userId",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "string",
+                "format": "uuid"
+              }
+            },
+            {
+              "name": "postId",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "string",
+                "format": "uuid"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Success",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/User-Profiles"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     },
     "components": {
       "schemas": {
